overflow fixed to only scroll on screen less than 768 px

--- a/src/pages/About/style.css
+++ b/src/pages/About/style.css
@@ -39,6 +39,7 @@
     width: 70%;
     margin: 5% auto;
     font-size: 1.3em;
+    overflow-y: hidden;
   }
 }
 
